--- a/src/style.scss
+++ b/src/style.scss
@@ -12,23 +12,57 @@
 .container {
 	max-width: 46rem;
 	width: 1140px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #c9f6ff;
+}
+
+.display-3 {
+	display: flex;
+	margin-left: 30%;
+	font-size: 4.5rem;
+    font-weight: 300;
+    line-height: 1.1;
+}
+
+.lead {
+
+}
+
+.form {
+	max-width: 700px;
+	margin-left: 30%;
+}
+.catName {
+
+	
+}
+
+#catNameListItem {
+	width: 50%;
+}
+
+.catInput {
+	position: relative;
+	margin-bottom: 5%;
+
 }
 
 .row {
 	margin: 5px;
-}
 
-.catListItem {
+	& .catListItem {
 	display: flex;
 	margin: 10px;
 
-	& .catImage {
-		margin: 30px;
+		& .catImage {
+			margin: 30px;
+		}
 	}
 }
 
 .footer {
     padding-top: 1.5rem;
-    color: #777;
+    color: #364649;
     border-top: .05rem solid #e5e5e5;
 }
